<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_forms"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:src="@drawable/booking" />

        <TextView
            android:id="@+id/form_header_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_header_plans"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/PlanName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:hint="@string/form_name"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/PlanLocation"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:hint="@string/form_loc"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/PlanStartDate"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/start_date"
            android:inputType="datetime"
            android:padding="20dp"
            android:textColor="@color/form_text" />
        <EditText
            android:id="@+id/PlanStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/start_time"
            android:inputType="time"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>
    <TextView
        android:id="@+id/endtimeheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/optional"
        android:textSize="13sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/PlanEndDate"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/end_date"
            android:inputType="datetime"
            android:padding="20dp"
            android:textColor="@color/form_text" />
        <EditText
            android:id="@+id/PlanEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/end_time"
            android:inputType="time"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/PDFplanslabel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Add your pdf ticket: "
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <Button
            android:id="@+id/plans_pdf_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:layout_marginTop="10dp"
            android:text="@string/add_pdf"
            android:textColor="@color/form_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pdfnametextp"
            android:textColor="@color/form_text"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/plans_form_button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@color/add"
            android:radius="10dp"
            android:text="@string/trip_button_name"
            android:textColor="@color/my_text_color" />
    </LinearLayout>

</LinearLayout>
