<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_forms"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:src="@drawable/suitcase" />

        <TextView
            android:id="@+id/form_header_travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_header_travel"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/TravelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:hint="@string/form_name"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/TravelLocation"
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:hint="@string/form_loc"
            android:inputType="text"
            android:padding="20dp"
            android:textColor="@color/form_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/TravelStartDate"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/start_date"
            android:inputType="date"
            android:padding="20dp"
            android:textColor="@color/form_text" />

        <EditText
            android:id="@+id/TravelStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:hint="@string/start_time"
            android:inputType="time"
            android:focusable="false"
            android:padding="20dp"
            android:textColor="@color/form_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/endtimeheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/optional"
        android:textSize="13sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/TravelEndDate"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/end_date"
            android:inputType="date"
            android:padding="20dp"
            android:textColor="@color/form_text" />
        <EditText
            android:id="@+id/TravelEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:focusable="false"
            android:hint="@string/end_time"
            android:inputType="time"
            android:padding="20dp"
            android:textColor="@color/form_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/PDFtravellabel"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="Add your pdf ticket: "
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <Button
            android:id="@+id/travel_pdf_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/my_text_color"
            android:layout_marginTop="10dp"
            android:text="@string/add_pdf"
            android:textColor="@color/form_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pdfnametextt"
            android:textColor="@color/form_text"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:gravity="center">
        <Button
            android:id="@+id/form_travel_button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@color/add"
            android:text="@string/trip_button_name"
            android:textColor="@color/my_text_color"
            android:radius="10dp"/>
    </LinearLayout>
</LinearLayout>