<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_forms"
    android:orientation="vertical"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:src="@drawable/maptrip" />

        <TextView
            android:id="@+id/form_header_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_header_trips"
            android:textSize="30sp" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">
    <EditText
        android:id="@+id/TripName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_text_color"
        android:hint="@string/form_name"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/form_text"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
    <EditText
        android:id="@+id/TripLocation"
        android:layout_width="425dp"
        android:layout_height="wrap_content"
        android:background="@color/my_text_color"
        android:hint="@string/tripCountry"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/form_text"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">
    <EditText
        android:id="@+id/TripStartDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_text_color"
        android:hint="@string/start_date"
        android:inputType="text"
        android:focusable="false"
        android:padding="20dp"
        android:textColor="@color/form_text"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
    <EditText
        android:id="@+id/TripEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/my_text_color"
        android:focusable="false"
        android:hint="@string/end_date"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/form_text"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/trip_form_button"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:background="@color/add"
            android:radius="10dp"
            android:text="@string/trip_button_name"
            android:textColor="@color/my_text_color" />
    </LinearLayout>

</LinearLayout>
