<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SecondActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg2"
            android:tint="#2F000000"/>
        <TextView
            android:id="@+id/TripsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="120dp"
            android:text="@string/trip_name"
            android:textColor="#ffff"
            android:textSize="45sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datess"
        android:paddingTop="12dp"
        android:paddingLeft="15dp"
        android:textSize="20sp" />

    <GridLayout
        android:id="@+id/mainGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="2">

        <!-- ROW 1  -->
        <!-- COLUMN 1  -->

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/travel_card"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchTravelActivity"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="101dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/travel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="7dp"
                    android:text="@string/travel_label"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- COLUMN 2  -->

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/plans_card"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchPlansActivity"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="79dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/plans" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingTop="7dp"
                    android:text="@string/plans_label"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <!-- ROW 2  -->
        <!-- COLUMN 1  -->

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/customs_card"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            android:onClick="launchCustomsActivity">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="81dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/laws" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingTop="7dp"
                    android:text="@string/customslaws_label"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- COLUMN 2  -->

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/map_card"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchMapsActivity"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="87dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/maps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="45dp"
                    android:paddingTop="7dp"
                    android:text="@string/map_label"
                    android:textAlignment="center"
                    android:textColor="#ffff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>



</LinearLayout>